--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 h1 {
   background-color: aquamarine;
   color: aliceblue;
+  color: aliceblue;
+  color: aliceblue;
+  color: aliceblue;
+  color: aliceblue;
 }
